objects/Con_PO__c.object
<CustomObject>
    <fields>
        <fullName>ARRA_Compliant__c</fullName>
        <label>ARRA Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Rejection_Notes__c</fullName>
        <label>Accounting Rejection Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicable_Taxes__c</fullName>
        <label>Applicable Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOL_Recieved__c</fullName>
        <inlineHelpText>Date BOL is received</inlineHelpText>
        <label>BOL Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrego_Shipping_Costs__c</fullName>
        <label>Borrego Shipping Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of the Amount Requested field of all Construction Requisitions that are of type Subcontractor Change Order associated with this Construction Purchase Order.  This field is calculated by the trigger ChangeOrderTotal.</description>
        <label>Change Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Code_Cat__c</fullName>
        <label>Cost Code/Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Modified__c</fullName>
        <formula>IF(AND(TEXT( Status__c ) &lt;&gt; &quot;Closed&quot;, TEXT( Status__c ) &lt;&gt; &quot;Cancelled&quot;), TODAY() - DATEVALUE(LastModifiedDate), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Notes__c</fullName>
        <label>Delivery Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Line_Total__c</fullName>
        <label>Distribution Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Cost__c</fullName>
        <label>Expected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Vendor Confirmed Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freight_Company__c</fullName>
        <label>Freight Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Vendor Part Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Total_Cost__c</fullName>
        <formula>Sales_Tax__c + Total_Cost__c + Total_Shipping_Costs__c + Non_Taxable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Freight_Allowance__c</fullName>
        <label>Max Freight Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Amount__c</fullName>
        <label>Non Taxable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Taxable_Amount_for_Printout__c</fullName>
        <formula>BLANKVALUE( Non_Taxable_Amount__c , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Taxable Amount for Printout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <label>Printed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Construction Purchase Orders</relationshipLabel>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Construction Purchase Orders</relationshipLabel>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Construction Purchase Orders</relationshipLabel>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchaser_Phone__c</fullName>
        <formula>Requested_By__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchaser Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requisition_Number__c</fullName>
        <label>Job Number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retention_Held__c</fullName>
        <description>This field is a pull through from the Retention Held field of the Construction Requisition record of type Subcontractor Requisition associated with this Construction Purchase Order.</description>
        <label>Retention Held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Percent__c</fullName>
        <description>This field is a pull through from the Retention Percent field of the Construction Requisition record of type Subcontractor PO associated with this Construction Purchase Order.</description>
        <label>Retention Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOA_Recieved__c</fullName>
        <inlineHelpText>Date SOA is recieved</inlineHelpText>
        <label>SOA Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <formula>Total_Cost__c *  Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Address__c</fullName>
        <label>Ship To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Phone__c</fullName>
        <label>Ship To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <label>Ship To Contact</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Purchase Orders (Ship To Account)</relationshipLabel>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_for_Printout__c</fullName>
        <formula>IF(RecordTypeId =&apos;012800000006dRw&apos;, Total_Shipping_Costs__c , Shipping__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping for Printout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Vendor_Terms_Account__c</fullName>
        <formula>Vendor_Account__r.Vendor_Terms_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Vendor Terms (from Account)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved by Aaron</fullName>
                </value>
                <value>
                    <fullName>PM Approved</fullName>
                </value>
                <value>
                    <fullName>Mary Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Vendor</fullName>
                </value>
                <value>
                    <fullName>Vendor Received PO</fullName>
                </value>
                <value>
                    <fullName>Material Deposit Paid</fullName>
                </value>
                <value>
                    <fullName>Vendor Shipped Material</fullName>
                </value>
                <value>
                    <fullName>Material Received</fullName>
                </value>
                <value>
                    <fullName>Work Complete</fullName>
                </value>
                <value>
                    <fullName>Notify AP- Invoice Attached</fullName>
                </value>
                <value>
                    <fullName>Invoice Received</fullName>
                </value>
                <value>
                    <fullName>Invoice Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subcontractor_Specialty__c</fullName>
        <formula>TEXT(Vendor_Account__r.Type)</formula>
        <label>Subcontractor Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Shipping_Costs__c</fullName>
        <label>Supplier Shipping Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption__c</fullName>
        <label>Tax Exemption Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Third_Party_Shipping__c</fullName>
        <label>Third Party Shipping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost_CO_s__c</fullName>
        <formula>Change_Order_Total__c +  Unit_Price__c+ Applicable_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost + CO&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Change__c</fullName>
        <label>Total Cost Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Tax__c</fullName>
        <formula>Sales_Tax__c + Total_Cost__c + Shipping__c+ Non_Taxable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>IF( OR(Quantity__c = null, Quantity__c = 0.00),  Unit_Price__c , Unit_Price__c * Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Tax Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Shipping_Costs__c</fullName>
        <formula>Borrego_Shipping_Costs__c + Supplier_Shipping_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Shipping Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_for_PO_printout__c</fullName>
        <formula>IF( RecordTypeId =&apos;012800000006dRw&apos;, Major_Total_Cost__c , Total_Cost_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total for PO printout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Requisitions</relationshipLabel>
        <relationshipName>Con_PO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Address1__c</fullName>
        <formula>Vendor_Account__r.BillingCity &amp; &quot;, &quot; &amp;  Vendor_Account__r.BillingState &amp; &quot; &quot; &amp; 
   Vendor_Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Address__c</fullName>
        <formula>Vendor_Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Purchase Orders</relationshipLabel>
        <relationshipName>Construction_Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Fax__c</fullName>
        <formula>Vendor_Account__r.Fax</formula>
        <label>Vendor Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <formula>Vendor_Account__r.Phone</formula>
        <label>Vendor Phone</label>
        <type>Text</type>
    </fields>
    <label>Construction Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Total_Shipping_Costs__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Con_PO__c.Major_Component_PO</value>
        </filters>
        <label>Major Component</label>
    </listViews>
    <nameField>
        <displayFormat>SF-PO-{000000}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Purchase Orders</pluralLabel>
    <recordTypes>
        <fullName>Major_Component_PO</fullName>
        <active>true</active>
        <description>Use when creating POs for major component requisitions</description>
        <label>Major Component PO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minor_Component_PO</fullName>
        <active>true</active>
        <description>Use when creating POs for minor components</description>
        <label>Minor Component PO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subcontractor_PO</fullName>
        <active>true</active>
        <label>Subcontractor PO</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ARRA_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordTypeId =&quot;012800000006dRw&quot;, ISBLANK(TEXT( ARRA_Compliant__c)),   ISPICKVAL(Status__c, &quot;PM Approved&quot;))</errorConditionFormula>
        <errorDisplayField>ARRA_Compliant__c</errorDisplayField>
        <errorMessage>Please enter if the component needs to be ARRA compliant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Aaron_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.FirstName &lt;&gt; &quot;Aaron&quot;, ISPICKVAL(Status__c, &quot;Approved by Aaron&quot;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only Aaron Hall can change the Status to Approved by Aaron.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Anita_Lynne_Mary_only_change_vendor_date</fullName>
        <active>true</active>
        <description>Only Lynne, Sara, and Anita can change the vendor delivery date</description>
        <errorConditionFormula>AND( (ISCHANGED( Expected_Delivery_Date__c )), $User.LastName &lt;&gt; &quot;Parker&quot;, $User.LastName &lt;&gt; &quot;Frieler&quot;, $User.LastName &lt;&gt; &quot;Orozco&quot; )</errorConditionFormula>
        <errorDisplayField>Expected_Delivery_Date__c</errorDisplayField>
        <errorMessage>Only Lynne, Mary, or Anita can update the Vendor Confirmed ship date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dollar_Cap</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() = FALSE, $User.Id &lt;&gt; &apos;005300000012qpF&apos;, $User.FirstName &lt;&gt;&apos;Emily&apos;, $User.Id &lt;&gt; &apos;00580000003xepO&apos;,$User.Id &lt;&gt; &apos;00530000000jcLS&apos;, $User.Id &lt;&gt; &apos;00580000001qecY&apos;, Total_Cost_Tax__c - PRIORVALUE(Total_Cost_Tax__c) &gt; 200)</errorConditionFormula>
        <errorDisplayField>Accounting_Rejection_Notes__c</errorDisplayField>
        <errorMessage>Changes in total cost cannot exceed $200. 
If the change is greater than $200 you will need to recall the requisition and start again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Force_Rejection_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c, &apos;Rejected&apos;),  Accounting_Rejection_Notes__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Accounting_Rejection_Notes__c</errorDisplayField>
        <errorMessage>Please enter Rejection Notes so the PM will know what to fix.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() = FALSE, ISPICKVAL(Status__c , &quot;PM Approved&quot;),  Cost_Code_Cat__c = &quot;02-1215 M&quot;,  Product__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Please enter the racking product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_Exemption</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() = FALSE, Tax_Exemption__c &lt;&gt; &apos;Exempt&apos; , Tax_Exemption__c &lt;&gt; &apos;Non-Exempt&apos; , Tax_Exemption__c &lt;&gt; &apos;Not Entered&apos;, Tax_Exemption__c &lt;&gt; &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Tax_Exemption__c</errorDisplayField>
        <errorMessage>You may only enter Exempt or Non-Exempt as the Tax Exemption Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Third_Party_Shipping</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISNEW() = FALSE, ISPICKVAL(Third_Party_Shipping__c , &quot;Yes&quot;), Freight_Company__c = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Freight_Company__c</errorDisplayField>
        <errorMessage>You must enter a Freight Company when Third Party Shipping equals Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vendor_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() = FALSE, ISPICKVAL(Status__c , &quot;PM Approved&quot;),  Vendor_Contact__r.Email = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Vendor_Contact__c</errorDisplayField>
        <errorMessage>Vendor Contact Email is required. Please go the the Vendor Contact page and enter the email address.</errorMessage>
    </validationRules>
</CustomObject>